scroll landscape jalan

--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -7,11 +7,16 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context="com.example.yelishia.androidcafe.DetailActivity">
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
     <fragment
         android:id="@+id/fragmentD"
         android:name="com.example.yelishia.androidcafe.FragmentDetail"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:layout="@layout/fragment_detail"/>
+    </ScrollView>
 
 </LinearLayout>
